--- a/views/index.erb
+++ b/views/index.erb
@@ -1,4 +1,19 @@
- <div style='border: 3px dashed red'>
+ <div style='border: 3px dashed red; width: 454'>
      <img src='http://bit.ly/1eze8aE'>
-     <h1>"My name is <%= @random_name %>"</h1>
+ </div>
+
+
+
+<h1>"My name is <%= @name %>"</h1>
+
+
+<% if @name.nil? %>
+<form action="/named-cat">
+<div>
+    <input type="text" name="name">
 </div>
+<div>
+    <input type="submit" value="Submit">
+</div>
+</form>
+<% end %>
